[gd_scene load_steps=3 format=3 uid="uid://b5n6o7p8q9r0s"]

[ext_resource type="Script" path="res://scripts/BIOSOverclocking.gd" id="1"]
[ext_resource type="Theme" path="res://assets/themes/bios_theme.tres" id="2"]

[node name="BIOSOverclocking" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="BIOSContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 0

[node name="Header" type="Panel" parent="BIOSContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 60)

[node name="HeaderText" type="RichTextLabel" parent="BIOSContainer/Header"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "[center]UEFI BIOS Utility - Advanced Mode
RAM Overclocking Simulator v1.0
Copyright (C) 2024 OverClock Labs[/center]"
fit_content = true

[node name="TopBar" type="ColorRect" parent="BIOSContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)
color = Color(0.7, 0.7, 0.7, 1)

[node name="MenuBar" type="HBoxContainer" parent="BIOSContainer/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 20
alignment = 1

[node name="MainButton" type="Button" parent="BIOSContainer/TopBar/MenuBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Main"

[node name="AiTweakerButton" type="Button" parent="BIOSContainer/TopBar/MenuBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "OC Tweaker"
toggle_mode = true
button_pressed = true

[node name="AdvancedButton" type="Button" parent="BIOSContainer/TopBar/MenuBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Advanced"

[node name="MonitorButton" type="Button" parent="BIOSContainer/TopBar/MenuBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Monitor"

[node name="ToolButton" type="Button" parent="BIOSContainer/TopBar/MenuBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Tool"

[node name="ExitButton" type="Button" parent="BIOSContainer/TopBar/MenuBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Exit"

[node name="MainContent" type="HSplitContainer" parent="BIOSContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 2
split_offset = 400

[node name="LeftPanel" type="ColorRect" parent="BIOSContainer/MainContent"]
layout_mode = 2
color = Color(0, 0, 0.3, 1)

[node name="SettingsScroll" type="ScrollContainer" parent="BIOSContainer/MainContent/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SettingsList" type="VBoxContainer" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="DRAMTitle" type="Label" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "┌─ DRAM Timing Control ─────────────┐"

[node name="FrequencyOption" type="HBoxContainer" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList"]
layout_mode = 2
custom_minimum_size = Vector2(0, 25)

[node name="Label" type="Label" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/FrequencyOption"]
layout_mode = 2
custom_minimum_size = Vector2(250, 0)
text = " DRAM Frequency"

[node name="Value" type="OptionButton" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/FrequencyOption"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)

[node name="PrimaryTimings" type="Label" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = " Primary Timings"

[node name="CLOption" type="HBoxContainer" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList"]
layout_mode = 2
custom_minimum_size = Vector2(0, 25)

[node name="Label" type="Label" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/CLOption"]
layout_mode = 2
custom_minimum_size = Vector2(250, 0)
text = "  CAS# Latency (tCL)"

[node name="Value" type="SpinBox" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/CLOption"]
layout_mode = 2
min_value = 10.0
max_value = 50.0
value = 16.0

[node name="tRCDOption" type="HBoxContainer" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList"]
layout_mode = 2
custom_minimum_size = Vector2(0, 25)

[node name="Label" type="Label" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/tRCDOption"]
layout_mode = 2
custom_minimum_size = Vector2(250, 0)
text = "  RAS# to CAS# Delay (tRCD)"

[node name="Value" type="SpinBox" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/tRCDOption"]
layout_mode = 2
min_value = 10.0
max_value = 50.0
value = 18.0

[node name="tRPOption" type="HBoxContainer" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList"]
layout_mode = 2
custom_minimum_size = Vector2(0, 25)

[node name="Label" type="Label" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/tRPOption"]
layout_mode = 2
custom_minimum_size = Vector2(250, 0)
text = "  RAS# Precharge (tRP)"

[node name="Value" type="SpinBox" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/tRPOption"]
layout_mode = 2
min_value = 10.0
max_value = 50.0
value = 18.0

[node name="tRASOption" type="HBoxContainer" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList"]
layout_mode = 2
custom_minimum_size = Vector2(0, 25)

[node name="Label" type="Label" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/tRASOption"]
layout_mode = 2
custom_minimum_size = Vector2(250, 0)
text = "  RAS# Active Time (tRAS)"

[node name="Value" type="SpinBox" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/tRASOption"]
layout_mode = 2
min_value = 20.0
max_value = 100.0
value = 36.0

[node name="CommandRate" type="HBoxContainer" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList"]
layout_mode = 2
custom_minimum_size = Vector2(0, 25)

[node name="Label" type="Label" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/CommandRate"]
layout_mode = 2
custom_minimum_size = Vector2(250, 0)
text = " Command Rate"

[node name="Value" type="OptionButton" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/CommandRate"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)

[node name="VoltageTitle" type="Label" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "├─ DRAM Voltage Configuration ─────┤"

[node name="DRAMVoltage" type="HBoxContainer" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList"]
layout_mode = 2
custom_minimum_size = Vector2(0, 25)

[node name="Label" type="Label" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/DRAMVoltage"]
layout_mode = 2
custom_minimum_size = Vector2(250, 0)
text = " DRAM Voltage"

[node name="Value" type="SpinBox" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/DRAMVoltage"]
layout_mode = 2
min_value = 1.0
max_value = 1.6
step = 0.005
value = 1.2
suffix = "V"

[node name="VCCIOVoltage" type="HBoxContainer" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList"]
layout_mode = 2
custom_minimum_size = Vector2(0, 25)

[node name="Label" type="Label" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/VCCIOVoltage"]
layout_mode = 2
custom_minimum_size = Vector2(250, 0)
text = " CPU VCCIO Voltage"

[node name="Value" type="SpinBox" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/VCCIOVoltage"]
layout_mode = 2
min_value = 0.9
max_value = 1.4
step = 0.005
value = 1.1
suffix = "V"

[node name="VCCSAVoltage" type="HBoxContainer" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList"]
layout_mode = 2
custom_minimum_size = Vector2(0, 25)

[node name="Label" type="Label" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/VCCSAVoltage"]
layout_mode = 2
custom_minimum_size = Vector2(250, 0)
text = " CPU System Agent Voltage"

[node name="Value" type="SpinBox" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/VCCSAVoltage"]
layout_mode = 2
min_value = 0.9
max_value = 1.4
step = 0.005
value = 1.25
suffix = "V"

[node name="ProfilesTitle" type="Label" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = "└─ Memory Profiles ────────────────┘"

[node name="XMPProfile" type="HBoxContainer" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList"]
layout_mode = 2
custom_minimum_size = Vector2(0, 25)

[node name="Label" type="Label" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/XMPProfile"]
layout_mode = 2
custom_minimum_size = Vector2(250, 0)
text = " OMP Profile"

[node name="Value" type="OptionButton" parent="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/XMPProfile"]
layout_mode = 2
custom_minimum_size = Vector2(120, 0)

[node name="RightPanel" type="Panel" parent="BIOSContainer/MainContent"]
layout_mode = 2

[node name="InfoContainer" type="VBoxContainer" parent="BIOSContainer/MainContent/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 10

[node name="SystemInfo" type="RichTextLabel" parent="BIOSContainer/MainContent/RightPanel/InfoContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 200)
theme_override_colors/default_color = Color(0, 1, 0, 1)
bbcode_enabled = true
text = "[b]System Information[/b]
════════════════════════════════════
Memory: Loading...
Frequency: ---- MHz
Timings: --/--/--/--
Voltage: -.---V

[b]Temperature Monitor[/b]
════════════════════════════════════
DIMM Temperature: --.-°C
System Temperature: --.-°C

[b]Stability Status[/b]
════════════════════════════════════
Current Stability: ---%
Errors Detected: 0"

[node name="HelpText" type="RichTextLabel" parent="BIOSContainer/MainContent/RightPanel/InfoContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.7, 0.7, 0.7, 1)
bbcode_enabled = true
text = "[b]Navigation Help[/b]
════════════════════════════════════
↑↓ : Select Item
←→ : Change Value
Enter : Enter Sub-menu
ESC : Exit/Back
F10 : Save & Exit
F5 : Load Optimized Defaults
F6 : Load XMP Profile
F7 : Run Stability Test

[b]Current Selection[/b]
════════════════════════════════════
Adjust memory frequency for overclocking"

[node name="BottomBar" type="Panel" parent="BIOSContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="StatusBar" type="HBoxContainer" parent="BIOSContainer/BottomBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 20
alignment = 1

[node name="F10" type="Label" parent="BIOSContainer/BottomBar/StatusBar"]
layout_mode = 2
text = "[F10] Save & Exit"

[node name="ESC" type="Label" parent="BIOSContainer/BottomBar/StatusBar"]
layout_mode = 2
text = "[ESC] Exit"

[node name="F5" type="Label" parent="BIOSContainer/BottomBar/StatusBar"]
layout_mode = 2
text = "[F5] Optimized Defaults"

[node name="F6" type="Label" parent="BIOSContainer/BottomBar/StatusBar"]
layout_mode = 2
text = "[F6] Load OMP"

[node name="F7" type="Label" parent="BIOSContainer/BottomBar/StatusBar"]
layout_mode = 2
text = "[F7] Stress Test"

[connection signal="pressed" from="BIOSContainer/TopBar/MenuBar/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="item_selected" from="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/FrequencyOption/Value" to="." method="_on_frequency_changed"]
[connection signal="value_changed" from="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/CLOption/Value" to="." method="_on_cl_changed"]
[connection signal="value_changed" from="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/tRCDOption/Value" to="." method="_on_trcd_changed"]
[connection signal="value_changed" from="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/tRPOption/Value" to="." method="_on_trp_changed"]
[connection signal="value_changed" from="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/tRASOption/Value" to="." method="_on_tras_changed"]
[connection signal="item_selected" from="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/CommandRate/Value" to="." method="_on_command_rate_changed"]
[connection signal="value_changed" from="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/DRAMVoltage/Value" to="." method="_on_dram_voltage_changed"]
[connection signal="value_changed" from="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/VCCIOVoltage/Value" to="." method="_on_vccio_voltage_changed"]
[connection signal="value_changed" from="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/VCCSAVoltage/Value" to="." method="_on_vccsa_voltage_changed"]
[connection signal="item_selected" from="BIOSContainer/MainContent/LeftPanel/SettingsScroll/SettingsList/XMPProfile/Value" to="." method="_on_xmp_profile_changed"]